--- a/Trello clone/index.html
+++ b/Trello clone/index.html
@@ -1,50 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <link rel="icon" href="./assets/logo.png">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create your first Workspace | Trello</title>
-    <link rel="stylesheet" href="./style_signin.css">
-</head>
-
-<body>
-    <header>
-        <img src="https://trello.com/assets/c8b7bafdbc02d4015366.svg" alt="trello">
-    </header>
-    <main>
-        <div class="container">
-            <div class="left">
-                <div class="leftFormContent">
-                    <h1>Welcome to Trello!</h1>
-                    <p>We're glad you made it. Let's start organizing your projects so you can get things done.</p>
-                    <button class="build_board">Go to your
-                        board</button>
-                    </div>
-            </div>
-
-            <div class="right">
-                <div class="lower">
-                    <svg viewBox="0 0 594 463"  xmlns="http://www.w3.org/2000/svg">
-                        <defs>
-                            <linearGradient id="grad2" x1="50%" y1="0%" x2="0%" y2="100%">
-                                <stop offset="0%" style="stop-color: rgb(252, 198, 235); stop-opacity: 1;"></stop>
-                                <stop offset="100%" style="stop-color: rgb(192, 182, 242); stop-opacity: 1;"></stop>
-                            </linearGradient>
-                        </defs>
-                        <path fill="url(#grad2)"
-                            d="M532 160.739C556 217 630.697 274.586 571 337.586C511.303 400.586 436 408 352 452C268 496 197.915 390.469 151 326C115.876 277.735 0 221.034 0 160.739C0 75.7133 92.1323 7.13798 151 0.739296C197 -4.26072 235.975 17.7392 292 17.7392C371.224 17.7392 418.042 -11.3217 465 32C506 69.8251 508 104.479 532 160.739Z">
-                        </path>
-                    </svg>
-                </div>
-                <div class="upper">
-                    <img alt="Welcome to Trello!" src="https://trello.com/assets/a7fb768ffd0181cbfc63.svg">
-                </div>
-            </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <title>Trello Clone</title>
+  </head>
+  <body>
+    <div class="container">
+      <h1>TRELLO CLONE</h1>
+      <form class="add-tasks">
+        <input type="text" id="tasks-input" placeholder="Add your Tasks here" />
+        <button type="submit">Add Task</button>
+      </form>
+      <div class="main-task-container">
+        <div class="task-container" id="todo-task">
+          <h3 class="heading">Backlog</h3>
+          <!-- <div class="text" draggable="true">
+                <p class="task" >Go to gym </p>
+                <i class="material-icons" style="font-size:18px;">delete</i>
+            </div> -->
+            <button class="btn" id="todo">Add your task</button>
         </div>
-    </main>
-    <script src="./welcome.js"></script>
-</body>
+        <div class="task-container" id="doing-task">
+          <h3 class="heading"> To Do</h3>
+          <!-- <div class="text" draggable="true">
+                <p class="task" >Go to gym </p>
+                <i class="material-icons" style="font-size:18px;">delete</i>
+            </div> -->
+            <button class="btn" id="doing">Add your task</button>
+        </div>
+        <div class="task-container" id="done-task">
+          <h3 class="heading">In Progress</h3>
+          <!-- <div class="text" draggable="true">
+                <p class="task" >Go to gym </p>
+                <i class="material-icons" style="font-size:18px;">delete</i>
+            </div> -->
+            <button class="btn" id="done">Add your task</button>
+        </div>
+        <div class="task-container" id="done-task">
+          <h3 class="heading">Done</h3>
+          <!-- <div class="text" draggable="true">
+                <p class="task" >Go to gym </p>
+                <i class="material-icons" style="font-size:18px;">delete</i>
+            </div> -->
+            <button class="btn" id="hold">Add your task</button>
+        </div>
+      </div>
+    </div>
 
+    <script src="./script.js"></script>
+  </body>
 </html>
